[Mac] Fix for the Verbose State Text Color

The text color should be white in incognito.

BUG=709311

Review-Url: https://codereview.chromium.org/2872503005
Cr-Commit-Position: refs/heads/master@{#470198}

Former-commit-id: c4c5806ef59df14009ad9258ad98d231c5fe1699